--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "My bot",
   "main": "bot.js",
   "author": "guima",
+  "engines":{
+     "node": "6.3.1"
+  }
   "dependencies": {
     "discord.io": "github:woor/discord.io#gateway_v6",
     "winston": "^2.4.0"
