--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "engines":{
      "node": "6.3.1"
   },
+  "scripts": {
+    "start": "node bot.js"
+  }
   "dependencies": {
     "discord.io": "github:woor/discord.io#gateway_v6",
     "winston": "^2.4.0"
