--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "My bot",
   "main": "bot.js",
   "author": "guima",
-  "engines":{
-     "node": "6.3.1"
+  "engines": {
+    "node": "6.3.1"
   },
   "scripts": {
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.io": "github:woor/discord.io#gateway_v6",
+    "discord.js": "^11.3.0",
     "winston": "^2.4.0"
   }
 }
